--- a/ansible/provision.yml
+++ b/ansible/provision.yml
@@ -1,14 +1,19 @@
 ---
 
+# should execute by root user.
 - hosts: targets
   become: true
   become_user: root
   gather_facts: true
   roles:
     - configuration
+  environment:
+    "{{ proxy_env }}"
 
+# general user to develop
 - hosts: targets
   become: false
   gather_facts: true
   roles:
     - configuration
+
