--- a/ansible/group_vars/targets/all.yml
+++ b/ansible/group_vars/targets/all.yml
@@ -1,7 +1,5 @@
 ---
 
-test: aaaaaaaaaaa
-
 go_packages:
     - golang.org/x/tools/cmd/goimports
     - golang.org/x/tools/cmd/godoc
@@ -17,6 +15,7 @@ packages:
     - tmux
     - docker
     - libreadline-dev
+    - vim
 
     # pyenv depdent apt packages
     - build-essential
