--- a/ansible/roles/configuration/tasks/Debian.yml
+++ b/ansible/roles/configuration/tasks/Debian.yml
@@ -43,7 +43,7 @@
     - name: git config
       template:
         src: ".gitconfig.j2"
-        dest: "{{ ansible_env.HOME }}/.ssh/config"
+        dest: "{{ ansible_env.HOME }}/.gitconfig"
         mode: 0755
       when: not git_config_file_state.stat.exists
 
